# sysora

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  db.rs  lib.rs  main.rs
src/components/charts/: HistoryChart.tsx  NetworkHistoryChart.tsx
src/components/layout/: Shell.tsx  Sidebar.tsx  StatCard.tsx  TopBar.tsx
src/components/modals/: AppDetailsModal.tsx
src/components/tabs/: AppsTab.tsx  DiskTab.tsx  HistoryTab.tsx  MemoryTab.tsx  NetworkTab.tsx  ProcessesTab.tsx  SettingsTab.tsx  SystemInfoTab.tsx
src/lib/: api.ts  utils.ts
src/store/: app.ts  scanner.ts
src/types/: index.ts
