[package]
name = "sysora"
version = "0.1.0"
description = "Sysora — cross-platform system monitor & manager"
authors = ["chojuninengu"]
edition = "2021"

[lib]
name = "sysora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sysora"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
