[package]
name = "sysora"
version = "0.3.0"
description = "Sysora — cross-platform system monitor & manager"
authors = ["chojuninengu"]
edition = "2021"

[lib]
name = "sysora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sysora"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
printpdf = "0.7"
walkdir = "2.5.0"
base64 = "0.22"
battery = "0.7.0"
clap = { version = "4", features = ["derive"] }
colored = "2"
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows-icons = "0.1.0"
[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
